--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="styles/bootstrap-social.css" rel="stylesheet">
+    <link href="styles/calendar.css" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet">
 
 </head>
@@ -24,6 +25,7 @@
     <script src="../bower_components/angular/angular.min.js"></script>
     <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="scripts/calendar.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers.js"></script>
     <script src="scripts/services.js"></script>
