--- a/app/index.html
+++ b/app/index.html
@@ -8,9 +8,8 @@
 
     <title>Micro Questionnaire RIA</title>
 
-    <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="styles/reset.css" rel="stylesheet">
     <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="styles/bootstrap-social.css" rel="stylesheet">
     <link href="styles/calendar.css" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet">
 
