--- a/app/index.html
+++ b/app/index.html
@@ -21,9 +21,19 @@
     <div ui-view="content"></div>
     <div ui-view="footer"></div>
 
+    <script src="http://s1.bdstatic.com/r/www/cache/ecom/esl/1-6-10/esl.js"></script>
     <script src="../bower_components/angular/angular.min.js"></script>
     <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript">
+      // 路径配置
+      require.config({
+        paths:{ 
+          'echarts' : 'http://echarts.baidu.com/build/echarts',
+          'echarts/chart/pie' : 'http://echarts.baidu.com/build/echarts'
+        }
+      });
+    </script>
     <script src="scripts/calendar.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers.js"></script>
