--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,8 @@
     </script>
     <script src="scripts/calendar.js"></script>
     <script src="scripts/app.js"></script>
+    <script src="scripts/filter.js"></script>
+    <script src="scripts/directive.js"></script>
     <script src="scripts/controllers.js"></script>
     <script src="scripts/services.js"></script>
 </body>
